--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ h2, h3 {
   -webkit-text-fill-color: transparent; /* Faz o preenchimento do texto transparente */
   font-size: 2.5em;
   text-align: center;
+  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2); /* Sombramento leve */
 }
+
 
 /* Ajuste no background da página */
 body {
@@ -92,7 +94,7 @@ p {
   position: relative;
   background-color: #fff;
   padding: 20px 30px;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
   z-index: 1;
   text-align: center;
